[package]
name = "azur-overlay"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
notify = "6.1.1"
futures = "0.3.29"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
